--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-  <style name="Theme.Material3.DayNight.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-  </style>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <!-- Tema de la app -->
+    <style name="Theme.Freyja" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Personalizaciones opcionales -->
+        <!-- <item name="android:statusBarColor">@android:color/transparent</item> -->
+    </style>
 </resources>
